--- a/src/main/java/groupwork/move.fxml
+++ b/src/main/java/groupwork/move.fxml
@@ -5,17 +5,18 @@
 
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.demo.MyJavaFX"
+          fx:controller="groupwork.MyJavaFX"
           hgap="10"
           vgap="10">
 
+
     <Label text="From:" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-    <TextField fx:id="originTextField" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+    <TextField fx:id="originTextFieldM" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
 
     <Label text="To:" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-    <TextField fx:id="destTextField" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+    <TextField fx:id="destTextFieldM" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
 
     <Label text="Units:" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-    <TextField fx:id="unitTextField" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+    <TextField fx:id="unitTextFieldM" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
 
 </GridPane>
