--- a/src/main/java/groupwork/upgrade.fxml
+++ b/src/main/java/groupwork/upgrade.fxml
@@ -5,7 +5,7 @@
 
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.demo.MyJavaFX"
+          fx:controller="groupwork.MyJavaFX"
           hgap="10"
           vgap="10">
 
