--- a/src/main/java/groupwork/resources/fxml/startGridPine.fxml
+++ b/src/main/java/groupwork/resources/fxml/startGridPine.fxml
@@ -3,7 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml" fx:controller="groupwork.MyJavaFX" styleClass="start-bg" stylesheets="@../css/startGridPine.css">
+<GridPane xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" fx:controller="groupwork.LoginController"
+          styleClass="start-bg" stylesheets="@../css/startGridPine.css">
 
     <Label text="Username:" GridPane.rowIndex="1" fx:id="usernameLabel" styleClass="label-style"/>
     <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="usernameField" />
@@ -12,5 +13,7 @@
     <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="3" >
         <Button text="Login" onAction="#handleLogin" styleClass="button-style"/>
         <Button text="Find password" onAction="#handleForgotPassword" styleClass="button-style"/>
+<!--        <Button text="Register" onAction="#handleRegister" styleClass="button-style"/>-->
+        <Button text="Exit" onAction="#handleExit" styleClass="button-style"/>
     </HBox>
 </GridPane>
