--- a/src/main/java/groupwork/resources/fxml/gameGrid.fxml
+++ b/src/main/java/groupwork/resources/fxml/gameGrid.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="groupwork.MyJavaFX" stylesheets="@../css/secondGrid.css" styleClass="pane-bg" >
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="groupwork.GameController" stylesheets="@../css/gameGrid.css" styleClass="pane-bg" >
     <top>
         <HBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml" spacing="10" >
             <children>
