--- a/src/main/java/groupwork/resources/fxml/upgrade.fxml
+++ b/src/main/java/groupwork/resources/fxml/upgrade.fxml
@@ -5,21 +5,21 @@
 
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="groupwork.MyJavaFX"
+          fx:controller="groupwork.GameController"
           hgap="10"
           vgap="10">
 
+    <Label text="From:" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <TextField fx:id="currentLevel" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
 
-<!--    <Label text="From:" GridPane.columnIndex="1" GridPane.rowIndex="1"/>-->
-<!--    <TextField fx:id="originTextField" GridPane.columnIndex="2" GridPane.rowIndex="1"/>-->
+    <Label text="To:" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+    <TextField fx:id="upGradeNumber" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
 
-<!--    <Label text="To:" GridPane.columnIndex="1" GridPane.rowIndex="2"/>-->
-<!--    <TextField fx:id="destTextField" GridPane.columnIndex="2" GridPane.rowIndex="2"/>-->
+    <Label text="Units:" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+    <TextField fx:id="expectedLevel" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
 
-<!--    <Label text="Units:" GridPane.columnIndex="1" GridPane.rowIndex="3"/>-->
-<!--    <TextField fx:id="unitTextField" GridPane.columnIndex="2" GridPane.rowIndex="3"/>-->
-
-<!--    <TextField fx:id="unitTextField" GridPane.columnIndex="2" GridPane.rowIndex="3"/>-->
+<!--    <Label text="Units:" GridPane.columnIndex="1" GridPane.rowIndex="4"/>-->
+<!--    <TextField fx:id="" GridPane.columnIndex="2" GridPane.rowIndex="4"/>-->
 
 
 </GridPane>
